<resources>
    <string name="app_name">Smart  Environmental Greenhouse</string>
    <string name="title_home">Home</string>
    <string name="title_light">Light</string>
    <string name="title_water">Water</string>
    <string name="title_temperature">Temperature</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LightLevel">Light Level</string>
    <string name="zeroWater">0 cm</string>
    <string name="zeroSoil">0 %</string>
    <string name="start">Start</string>
    <string name="status">Status</string>
    <string name="stop">Stop</string>
    <string name="soilMoistLvl">Soil moisture level</string>
    <string name="waterlvl">Water level</string>
    <string name="fill">Fill Water</string>
    <string name="none">None</string>
    <string name="EnergyUsage">Energy Usage :</string>
    <string name="LED">LED :</string>
    <string name="PowerSupply">Power Supply :</string>
    <string name="EnergyGenerated">Energy Generated :</string>
    <string name="on">ON</string>
    <string name="OFF">OFF</string>
</resources>